Approx all logic is done

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -39,6 +39,7 @@
     margin-right: -1.5em;
     border:none;
     box-shadow: 0px 2px 1.5px 1px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
 }
 .card__deleteImg{
     width: 1.25em;
