--- a/src/components/Admin.css
+++ b/src/components/Admin.css
@@ -25,6 +25,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    cursor: pointer;
 }
 .btn__config{
     display: flex;
