--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -6,7 +6,7 @@
     /* justify-content: center; */
     align-items: center;
     border-radius: 7px;
-    height: 12em;
+    height: 14em;
     width: 13em;
     margin-top: 1.5em;
     
@@ -40,6 +40,14 @@
     border:none;
     box-shadow: 0px 2px 1.5px 1px rgba(0, 0, 0, 0.2);
     cursor: pointer;
+}
+
+.card__deleteBtn:hover {background-color: #3e8e41}
+
+.card__deleteBtn:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
 .card__deleteImg{
     width: 1.25em;
