--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -40,3 +40,11 @@ body{
     margin-bottom: 2em;
     cursor: pointer;
 }
+
+.login__btn:hover {background-color: #3e8e41}
+
+.login__btn:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
