--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -10,7 +10,7 @@ img{
 
 .home{
     width: 375px;
-    border: solid red 1px;
+    box-shadow: 0px 2px 1.5px 1px rgba(0, 0, 0, 0.2);
 }
 .headbar{
     display: flex;
